--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,11 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+nav {
+  display: flex;
 }
 
-a {
-  color: #00B7FF;
+nav a {
+  padding: 0px 5px;
+}
+
+.home-link {
+  flex-grow: 1;
 }
