--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,4 +4,12 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    nav
+      a(class='home-link' href='/') Home
+      a(href='/create-item') Create Item
+      a(href='/all-items') View All Items
+      a(href='/deleted-items') View Deleted Items
+    
+    h1=title
+
     block content
