added routes/controllers, renamed route urls
added needed delete routes and added routes for post requests from forms

renamed urls to be similar in pattern

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,9 +6,9 @@ html
   body
     nav
       a(class='home-link' href='/') Home
-      a(href='/create-item') Create Item
-      a(href='/all-items') View All Items
-      a(href='/deleted-items') View Deleted Items
+      a(href='/item/create') Create Item
+      a(href='/items/all') View All Items
+      a(href='/items/deleted') View Deleted Items
     
     h1=title
 
