--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,8 @@ doctype html
 html
   head
     title= title
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     nav
@@ -10,6 +12,6 @@ html
       a(href='/items/all') View All Items
       a(href='/items/deleted') View Deleted Items
     
-    h1=title
+    h1(class='page-title')=title
 
     block content
