--- a/views/create-item.pug
+++ b/views/create-item.pug
@@ -1,3 +1,7 @@
 extends layout
 
 block content
+    form(action="/item/create", method="POST")
+        input(type="text", name="name", placeholder="Item Name" required)
+        input(type="text", name="price", placeholder="Item Price" required)
+        button(type="submit") Create Item
