added undelete functionality

--- a/views/deleted-items.pug
+++ b/views/deleted-items.pug
@@ -9,4 +9,4 @@ block content
                 p= item.deleteComment
                 .item-card-links
                     a(href=`/item/${item.id}`) View
-                    a(href=`/item/${item.id}/delete`) Undelete
+                    a(href=`/item/${item.id}/undelete`) Undelete
