added styling to main content areas

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,7 +11,8 @@ html
       a(href='/item/create') Create Item
       a(href='/items/all') View All Items
       a(href='/items/deleted') View Deleted Items
-    
-    h1(class='page-title')=title
 
-    block content
+    div.content    
+      h1(class='page-title')=title
+
+      block content
