--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,7 +24,7 @@ nav a {
 }
 
 .page-title {
-  margin: 50px 0;
+  margin-bottom: 50px;
 }
 
 .home-link {
@@ -71,4 +71,13 @@ button:hover {
 
 .delete-checkbox-label {
   padding-right: 20px;
+}
+
+.content {
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  max-width: 300px;
+  margin: 25px auto;
+  /* border: 1px solid #dedede; */
+  border-radius: 5px;
+  padding: 50px;
 }
