--- a/views/create-item.pug
+++ b/views/create-item.pug
@@ -3,5 +3,5 @@ extends layout
 block content
     form(action="/item/create", method="POST")
         input(type="text", name="name", placeholder="Item Name" required)
-        input(type="text", name="price", placeholder="Item Price" required)
+        input(type="number", step='0.01', name="price", placeholder="Item Price" required)
         button(type="submit") Create Item
