--- a/views/edit-item.pug
+++ b/views/edit-item.pug
@@ -3,7 +3,7 @@ extends layout
 block content
     form(action=`/item/${item.id}/edit/`, method="POST")
         input(type="text", name="name", placeholder="Item Name" value=item.name required)
-        input(type="text", name="price", placeholder="Item Price" value=item.price required)
+        input(type="number", step='0.01', name="price", placeholder="Item Price" value=item.price required)
         .delete-checkbox 
             label(for="deleted" class='delete-checkbox-label') Mark as Deleted?
             input(type="checkbox", name="deleted", checked=item.deleted)
