renamed all to inventory items for clarity
renamed nav link and page title from view all items
to view inventory items

can be confusing since there is also a deleted items  page and link

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,7 +9,7 @@ html
     nav
       a(class='home-link' href='/') Home
       a(href='/item/create') Create Item
-      a(href='/items/all') View All Items
+      a(href='/items/all') View Inventory Items
       a(href='/items/deleted') View Deleted Items
 
     div.content    
