added application info to homepage

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,3 +1,7 @@
 extends layout
 
 block content
+    div.homepage
+        p This is my web application for the Fall 2022 - Shopify Back End Developer Intern Challenge.
+        p It is a CRUD app for baked goods. Please see the nav bar at the top for links to the different pages or click below to view the items in the inventory.
+        a(href='/items/all') View Inventory Items
